# streamlit-app

./: README.md  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
data/: data-generation.ipynb
src/: 00_Overview.py  01_Overview.py  My_Projects_Home_Page.py  home.py
src/pages/: 01_Fishing_Catch_Viewer.py  02_CO2_Emission_Viewer.py  CO2_Emission_Viewer.py  Fishing_Catch_Viewer.py  Fishing_Yield_Viewer.py
streamlit_work/: app.py
streamlit_work/pages/: forms.py
tests/: test_streamlit_work.py
