[tool.poetry]
name = "streamlit-work"
version = "0.1.0"
description = ""
authors = ["Tatsuhiro Terada <tatsuhirotera@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.12, <3.10.0"
streamlit = "^1.32.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.20.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
